# lines-cli

./: Cargo.toml  lines.txt
src/: main.rs
